--- a/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/private/todo_admin.xhtml
+++ b/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/private/todo_admin.xhtml
@@ -5,7 +5,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:e="http://commons.esup-portail.org"
 	xmlns:p="http://primefaces.prime.com.tr/ui" 
-	template="/stylesheets/simpleTemplate.xhtml">
+	template="/stylesheets/template.xhtml">
 
 	
     <ui:define name="content"><!-- mettre un pannel avec header admin -->
