--- a/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/private/todo_private.xhtml
+++ b/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/private/todo_private.xhtml
@@ -5,7 +5,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:e="http://commons.esup-portail.org"
 	xmlns:p="http://primefaces.prime.com.tr/ui" 
-	template="/stylesheets/simpleTemplate.xhtml">
+	template="/stylesheets/template.xhtml">
 
 	
     <ui:define name="content">
@@ -75,7 +75,6 @@
 					</p:commandButton>
 				</p:column>
 			</p:dataTable>
-			<p:commandButton value="#{msgs['TODO_DEMO.ADMIN']}"	action="#{todoAdminController.goTodoAdminDemo}" ></p:commandButton>
 			
 		</h:form>
 				
