--- a/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/private/todo_private_edit_task_dialog.xhtml
+++ b/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/private/todo_private_edit_task_dialog.xhtml
@@ -7,10 +7,10 @@
 	xmlns:p="http://primefaces.prime.com.tr/ui">
 
 	
-    <p:dialog id="dialogEditTaskId" widgetVar="dialogEditTask" header="#{msgs['TODO_DEMO.FORM.ACTION.CREATETASK']}" modal="true" width="400"> 
+    <p:dialog id="dialogEditTaskId" widgetVar="dialogEditTask" header="#{msgs['TODO_DEMO.FORM.ACTION.EDITTASK']}" modal="true" width="400"> 
 
     		 <h:form id="formEditTask">
-    		 
+    		 			<h:inputHidden id="id" value="#{taskController.taskToUpdate.id}"/>
     				  <h:panelGrid id="grid" columns="2" cellpadding="5">  
     				  	
     				  	<t:outputLabel value="#{msgs['TODO_DEMO.TASK.DATE']} :" for="date"/>
