--- a/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/preferences.xhtml
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/preferences.xhtml
@@ -3,23 +3,28 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:tr="http://myfaces.apache.org/trinidad" template="template.xhtml">
 	<ui:define name="content">
-        <tr:form>
-            <tr:spacer height="20px" />
-            <tr:selectOneChoice label="#{msgs['PREFERENCES.LANGUAGE.LABEL']}: "
-                value="#{sessionController.locale}" converter="#{localeConverter}">
-                <f:selectItems value="#{preferencesController.localeItems}" />
-            </tr:selectOneChoice>
-            <tr:spacer height="20px" />
-            <tr:selectOneChoice label="#{msgs['PREFERENCES.ACCESSIBILITY.LABEL']}: "
-                value="#{sessionController.accessibilityMode}">
-                <f:selectItems value="#{preferencesController.accessibilityModeItems}" />
-            </tr:selectOneChoice>
-            <tr:spacer height="20px" />
-            <tr:commandButton text="#{msgs['SUBMIT.TEXT']}" id="changePreferences"
-                action="preferences" />
-        </tr:form>
-        <tr:spacer height="20px" />
-        <tr:outputDocument value="#{msgs['PREFERENCES.ACCESSIBILITY.SCREENREADER.TEXT']}"
-            rendered="#{sessionController.accessibilityMode=='screenReader'}" />
+		<tr:form>
+			<tr:panelFormLayout rows="2" maxColumns="1" labelWidth="140">
+				<tr:spacer height="20px" />
+				<tr:selectOneChoice label="#{msgs['PREFERENCES.LANGUAGE.LABEL']}: "
+					value="#{sessionController.locale}" converter="#{localeConverter}">
+					<f:selectItems value="#{preferencesController.localeItems}" />
+				</tr:selectOneChoice>
+				<tr:spacer height="20px" />
+				<tr:selectOneChoice
+					label="#{msgs['PREFERENCES.ACCESSIBILITY.LABEL']}: "
+					value="#{sessionController.accessibilityMode}">
+					<f:selectItems
+						value="#{preferencesController.accessibilityModeItems}" />
+				</tr:selectOneChoice>
+			</tr:panelFormLayout>
+			<tr:spacer height="20px" />
+			<tr:commandButton text="#{msgs['SUBMIT.TEXT']}"
+				id="changePreferences" action="preferences" />
+		</tr:form>
+		<tr:spacer height="20px" />
+		<tr:outputDocument
+			value="#{msgs['PREFERENCES.ACCESSIBILITY.SCREENREADER.TEXT']}"
+			rendered="#{sessionController.accessibilityMode=='screenReader'}" />
 	</ui:define>
 </ui:composition>
