Correction update en base

--- a/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/simpleTemplate.xhtml
+++ b/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/simpleTemplate.xhtml
@@ -20,11 +20,11 @@
 	</h:head>
 	<h:body styleClass="fl-theme-app">
 		<ui:include src="_include/_header.xhtml" />
+		
 		<div id="body">
 			<div class="app-body">
 				<ui:insert name="navigation" />
-				
-				<div class="app-content"><br />
+				<div class="app-content" style="clear: both;" >
 				<ui:insert name="content" /></div>
 				<div style="clear: both;" />
 				<ui:insert name="hidden-div" />
