injection du userBean au moment du addUser(). rendu nécessaire du fait du changement de scope du contrôlleur

--- a/example-web-jsf-servlet/src/main/webapp/stylesheets/jpa_demo.xhtml
+++ b/example-web-jsf-servlet/src/main/webapp/stylesheets/jpa_demo.xhtml
@@ -23,7 +23,10 @@
 			</e:ul>
 			<hr/>
 			<br />
-			<p:commandButton value="add" action="#{welcomeController.addUser}" update="growl,@form,myform3"/>
+			<p:commandButton value="add" action="#{welcomeController.addUser}" update="growl,@form,myform3">
+				<f:setPropertyActionListener value="#{userBean}"
+							target="#{welcomeController.userToUpdate}" />
+			</p:commandButton>
 			<p:commandButton value="cancel" action="#{userBean.reset}" update="formAddUser"/>
 		</h:form>
 		<br/>
