--- a/example-web-jsf-mixed/src/main/webapp/stylesheets/mobile/template.xhtml
+++ b/example-web-jsf-mixed/src/main/webapp/stylesheets/mobile/template.xhtml
@@ -3,18 +3,22 @@
 	xmlns:tr="http://myfaces.apache.org/trinidad"
 	locale="#{sessionController.locale}">
 	<tr:document title="#{msgs['EXAMPLE.TEXT']}">
-	<!-- div class for portlet css -->
-	<div class="trinidad12">
+		<ui:include src="facet.xhtml" />
 		<tr:group rendered="#{not exceptionController.exception}">
 			<ui:include src="menu.xhtml" />
 			<ui:insert name="content" />
 		</tr:group>
 		<tr:group rendered="#{exceptionController.exception}">
 			<tr:form id="exceptionButtons">
-			<tr:commandButton text="#{msgs['EXCEPTION.BUTTON.RESTART']}"
-				id="restart" action="#{exceptionController.restart}" />
+				<div class="panelBase"><tr:panelCaptionGroup>
+					<tr:panelGroupLayout>
+						<div class="row"><tr:commandLink
+							text="#{msgs['EXCEPTION.BUTTON.RESTART']}"
+							action="#{exceptionController.restart}"
+							styleClass="centerMessageLink" /></div>
+					</tr:panelGroupLayout>
+				</tr:panelCaptionGroup></div>
 			</tr:form>
 		</tr:group>
-	</div>
 	</tr:document>
 </f:view>
