--- a/example-web-jsf-mixed/src/main/webapp/stylesheets/mobile/template_exception.xhtml
+++ b/example-web-jsf-mixed/src/main/webapp/stylesheets/mobile/template_exception.xhtml
@@ -2,7 +2,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:tr="http://myfaces.apache.org/trinidad"
 	locale="#{sessionController.locale}">
-	<tr:document title="#{msgs['EXAMPLE.TEXT']}">
+	<tr:document title="#{msgs['BLANK.TEXT']}">
 		<ui:include src="facet.xhtml" />
 		<ui:include src="menu.xhtml" />
 		<ui:insert name="content" />
