--- a/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/private/todo_private_edit_task_dialog.xhtml
+++ b/todo-list-web-jsf-servlet/src/main/webapp/stylesheets/private/todo_private_edit_task_dialog.xhtml
@@ -9,6 +9,10 @@
 	
     <p:dialog id="dialogEditTaskId" widgetVar="dialogEditTask" header="#{msgs['TODO_DEMO.FORM.ACTION.EDITTASK']}" modal="true" width="400"> 
 
+<h:outputLink
+ value="#{taskController.taskUrl}">
+  <f:verbatim>Test</f:verbatim>
+</h:outputLink>
     		 <h:form id="formEditTask">
     		 		  <h:inputHidden id="id" value="#{taskController.taskToUpdate.id}"/>
     				  <h:panelGrid id="grid" columns="2" cellpadding="5">  
