exercice 4 et 5 et transformation de 1 et 2 en 8 et 9

--- a/esup-formation-web-jsf-servlet/src/main/webapp/stylesheets/welcome.xhtml
+++ b/esup-formation-web-jsf-servlet/src/main/webapp/stylesheets/welcome.xhtml
@@ -27,6 +27,6 @@
 				</h:panelGrid>
 
 			</h:form>
-			<h:outputText value="#{taskController.testDao}" />
+			 <!--<h:outputText value="#{taskController.testDao}" />-->
 	</ui:define>
 </ui:composition>
