fixed: datalist tag

--- a/example-web-jsf-servlet/src/main/webapp/stylesheets/rest_demo.xhtml
+++ b/example-web-jsf-servlet/src/main/webapp/stylesheets/rest_demo.xhtml
@@ -48,9 +48,7 @@
 		<br />
 		<h:form>
 			<p:dataList var="user" value="#{welcomeController.restUsers}">
-				<p:column>
-					<h:outputText value="#{user.displayName}" />
-				</p:column>
+				#{user.displayName}"
 			</p:dataList>
 		</h:form>
 	</ui:define>
